# dot-context

./: .gitignore  LICENSE  README.md  pyproject.toml
dcx/: __init__.py  cli.py  config.py  context_sets.py  example.context  history.py  query.py
dcx/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
dcx/tests/: conftest.py  test_cli.py  test_cli_query.py  test_config.py  test_context_sets.py  test_providers.py  test_query.py  test_tokens.py
dcx/utils/: tokens.py
